--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -15,9 +15,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!    
-        
-      - uses: actions/first-interaction@v1
+      - uses: actions/github-script@v5
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: 'Message that will be displayed on users first issue'
-          pr-message: 'Message that will be displayed on users first pull request'
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '👋 hi this is bot!'
+            })        
