--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -22,5 +22,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 hi this is bot! repo is ${{ context.repo.repo }}'
+              body: '👋 hi this is bot! repo is ${{ github.event.review }}'
             })        
