--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -22,10 +22,10 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 hi this is bot! 
+              body: `👋 hi this is bot! 
               
               testing newline
               - [ ] check markdown
               
-              reviewer is @${{ github.event.review.user.login }}'
+              reviewer is @${{ github.event.review.user.login }}`
             })        
