--- a/.github/workflows/pr-reviewer-checklist-verify.yml
+++ b/.github/workflows/pr-reviewer-checklist-verify.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/github-script@v5
         with:
           script: |
-            console.log(github.rest.issues)
+            console.log(github.rest.issues); 
             (() => { github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
