--- a/.github/workflows/pr-reviewer-checklist-verify.yml
+++ b/.github/workflows/pr-reviewer-checklist-verify.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           script: |
             console.log(github.rest.issues); 
-            github.reset.issues.listComments({
+            github.rest.issues.listComments({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo
