--- a/.github/workflows/pr-reviewer-checklist-verify.yml
+++ b/.github/workflows/pr-reviewer-checklist-verify.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches:
       - main
+  issue_comment:
+    types: [created, edited, deleted]
       
 jobs:
   verify-checklist-completed:
