--- a/.github/workflows/pr-reviewer-checklist-verify.yml
+++ b/.github/workflows/pr-reviewer-checklist-verify.yml
@@ -1,9 +1,9 @@
 name: Verify that PR reviewer checklist has been filled out for PRs to main
 
 on:
-#  pull_request:
-#    branches:
-#      - main
+  pull_request:
+    branches:
+      - main
   issue_comment:
     types: [created, edited, deleted]
       
@@ -17,6 +17,18 @@ jobs:
       - uses: actions/github-script@v5
         with:
           script: |
+            console.log(github.actions.reRunWorkflow);
+            const workflowRuns = await octokit.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'pr-reviewer-checklist-verify.yml'
+            });
+            console.log({workflowRuns});
+            
+            /* await github.actions.reRunWorkflow({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            }); */ ;
             const comments = await github.rest.issues.listComments({
               issue_number: context.issue.number,
               owner: context.repo.owner,
