--- a/.github/workflows/pr-reviewer-checklist-verify.yml
+++ b/.github/workflows/pr-reviewer-checklist-verify.yml
@@ -42,18 +42,30 @@ jobs:
       - uses: actions/github-script@v5
         with:
           script: |
-            console.log(github.rest.actions.retryWorkflow);
-            const workflowRuns = await github.rest.actions.listWorkflowRuns({
+            // console.log(github.rest.actions.retryWorkflow);
+            const workflowRunsData = await github.rest.actions.listWorkflowRuns({
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: 'pr-reviewer-checklist-verify.yml'
             });
-            console.log(workflowRuns.data);
-            
-            /* await github.actions.reRunWorkflow({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-            }); */ ;
+            console.log(workflowRunsData.data);
+            // drop the first most recent run (this one); then find the most recent run on a pull_request which failed; and rerun it
+            const workflowRuns = workflowRunsData.data.workflow_runs.slice(1);
+            let theWorkflowRun;
+            for (const workflowRun of workflowRuns) {
+              if (workflowRun.event === 'pull_request' && workflowRun.conclusion === 'failure') {
+                theWorkflowRun = workflowRun;
+                break;
+              }
+            }
+            if (theWorkflowRun) {
+              await github.rest.actions.retryWorkflow({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                run_id: theWorkflowRun.id
+              });
+            }
+              
             const comments = await github.rest.issues.listComments({
               issue_number: context.issue.number,
               owner: context.repo.owner,
