--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   cleaner:
+    runs-on: ubuntu-latest
 #    runs-on:
 #      - self-hosted
 #      - ci
@@ -17,6 +18,7 @@ jobs:
           rm -rf "${{ github.workspace }}"
   trigger_hubot_deploy:
     name: Deploy services
+    runs-on: ubuntu-latest
 #    runs-on:
 #      - self-hosted
 #      - ci
